--- a/assignments/assignment_2/index.html
+++ b/assignments/assignment_2/index.html
@@ -22,7 +22,7 @@
       <button v-on:click="alertButton">Show Alert</button>
       <hr />
       <!-- 2) Register the user input on "keydown" and output it in the paragraph (hint: event.target.value helps) -->
-      <input type="text" v-on:input="setUserInput1" />
+      <input type="text" v-on:keydown="setUserInput1" />
       <p>OUTPUT: {{ user_input_1 }}</p>
       <hr />
       <!-- 3) Repeat 2) but only output the entered value if the ENTER key was pressed -->
